==> grbl/grbl/arch/stm32l/stepper.c <==
#include "dev_misc.h"
#include "stepper.h"
#include "config.h"
#include "settings.h"
#include <math.h>
#include <stdlib.h>
#include "nuts_bolts.h"
#include "planner.h"
#include "limits.h"
#include <stm32f10x.h>
#include <stm32f10x_conf.h>
#define STEPPER_X_A1 	GPIO_Pin_0
#define STEPPER_X_A2 	GPIO_Pin_1
#define STEPPER_X_B1 	GPIO_Pin_2
#define STEPPER_X_B2 	GPIO_Pin_3
#define STEPPER_Y_A1    GPIO_Pin_4
#define STEPPER_Y_A2 	GPIO_Pin_5
#define STEPPER_Y_B1 	GPIO_Pin_6
#define STEPPER_Y_B2 	GPIO_Pin_7
#define STEPPER_Z_A1    GPIO_Pin_8
#define STEPPER_Z_A2 	GPIO_Pin_9
#define STEPPER_Z_B1 	GPIO_Pin_10
#define STEPPER_Z_B2 	GPIO_Pin_11
#define STEPPER_X_ENABLE GPIO_Pin_8
#define STEPPER_Y_ENABLE GPIO_Pin_9
#define STEPPER_ALL_PINS (STEPPER_X_A1|STEPPER_X_A2|STEPPER_X_B1|STEPPER_X_B2|STEPPER_Y_A1|STEPPER_Y_A2|STEPPER_Y_B1|STEPPER_Y_B2|STEPPER_X_ENABLE|STEPPER_Y_ENABLE)
#define STEPPER_PORT 	GPIOC
#define TICKS_PER_MICROSECOND (F_CPU/1000000)
#define CYCLES_PER_ACCELERATION_TICK ((TICKS_PER_MICROSECOND*1000000)/ACCELERATION_TICKS_PER_SECOND)
#define DIR_FORWARD	1
#define DIR_BACKWARD	0

static void st_wake_up() 
{
  // Initialize stepper output bits
  out_bits = (0) ^ (settings.invert_mask); 
  // Set step pulse time. Ad hoc computation from oscilloscope.
  step_pulse_time = -(((settings.pulse_microseconds-2)*TICKS_PER_MICROSECOND) >> 3);
  // Enable steppers by resetting the stepper disable port
  //STEPPERS_DISABLE_PORT &= ~(1<<STEPPERS_DISABLE_BIT);
  // Enable stepper driver interrupt
	do_int = 1; 
}

void st_init()
{

	GPIO_InitTypeDef gpio_init;

	gpio_init.GPIO_Pin = STEPPER_ALL_PINS;	
	gpio_init.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_Init(STEPPER_PORT, &gpio_init);
	
	STEPPER_PORT->BRR = STEPPER_ALL_PINS;

	TIM_TimeBaseInitTypeDef timer_settings;
	/* Time base configuration */
	timer_settings.TIM_Period = MINIMUM_STEPS_PER_MINUTE;
	timer_settings.TIM_Prescaler = 1-1;
	timer_settings.TIM_ClockDivision = TIM_CKD_DIV1;
	timer_settings.TIM_CounterMode = TIM_CounterMode_Up;
	TIM_TimeBaseInit(TIM2, &timer_settings);

	/* Clear TIM2 update pending flag */
	TIM_ClearFlag(TIM2, TIM_FLAG_Update);

	/* TIM IT enable */
	TIM_ITConfig(TIM2, TIM_IT_Update, ENABLE);

	TIM_ClearFlag(TIM2, TIM_FLAG_Update);

	TIM_Cmd(TIM2, ENABLE);
	
	// Start in the idle state
	st_go_idle();
}
